apps/canary-rollouts/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: visa-gw
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "lr5.support.cf-cd.com"
---
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: canary-ro
# spec:
#   hosts:
#   - "rollout.lr5.support.cf-cd.com"
#   gateways:
#   - visa-gw
#   http:
#   - name: primary  ## referenced in canary.trafficRouting.istio.virtualService.routes
#     route:
#     - destination:
#         host: canary-ro.visa.svc.cluster.local ## referenced in canary.stableService
#       weight: 100 ## this is ignored by Argo Rollouts
#     - destination:
#         host: canary-ro-preview.visa.svc.cluster.local ## referenced in canary.canaryService
#       weight: 0 ## this is ignored by Argo Rollouts
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: canary
spec:
  hosts:
  - "lr5.support.cf-cd.com"
  gateways:
  - visa-gw
  http:
  - match:
    - uri:
        prefix: /canary
    route:
    - destination:
        host:  canary-ro.visa.svc.cluster.local
        port:
          number: 80
